--- a/src/libraries/aprepro_lib/CMakeLists.txt
+++ b/src/libraries/aprepro_lib/CMakeLists.txt
@@ -63,43 +63,43 @@ endif()
 
 TRIBITS_ADD_LIBRARY(
   aprepro_lib
-  HEADERS	${HEADERS}
+  HEADERS ${HEADERS}
   SOURCES ${SOURCES}
 )
 
-if(${SEACAS_PREFIX}Aprepro_lib_ENABLE_TESTS)
+if(${PACKAGE_NAME}_ENABLE_TESTS)
   add_executable(aprepro_test_app apr_test.cc)
   target_link_libraries(aprepro_test_app aprepro_lib)
+
+  TRIBITS_ADD_ADVANCED_TEST(
+    aprepro_lib_unit_test
+    TEST_0 CMND ${CMAKE_CURRENT_BINARY_DIR}/aprepro_test_app ARGS ${CMAKE_CURRENT_SOURCE_DIR}/test.inp_app
+    OUTPUT_FILE test.output
+    PASS_ANY
+    TEST_1 CMND sed ARGS s+${CMAKE_CURRENT_SOURCE_DIR}++
+    ${CMAKE_CURRENT_BINARY_DIR}/test.output
+    OUTPUT_FILE filtered.output
+    PASS_ANY
+    TEST_2 CMND diff ARGS -w
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_standard.out
+    ${CMAKE_CURRENT_BINARY_DIR}/filtered.output
+    COMM serial
+    FINAL_PASS_REGULAR_EXPRESSION
+    )
+
+  TRIBITS_ADD_ADVANCED_TEST(
+    aprepro_lib_array_test
+    TEST_0 CMND ${CMAKE_CURRENT_BINARY_DIR}/aprepro_test_app
+    ARGS --include=${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/test-array.i
+    OUTPUT_FILE test-array.out
+    PASS_ANY
+    TEST_1 CMND diff ARGS -w
+    ${CMAKE_CURRENT_SOURCE_DIR}/test-array.gold
+    ${CMAKE_CURRENT_BINARY_DIR}/test-array.out
+    COMM serial
+    FINAL_PASS_REGULAR_EXPRESSION
+    )
 endif()
-
-TRIBITS_ADD_ADVANCED_TEST(
- aprepro_lib_unit_test
- TEST_0 CMND ${CMAKE_CURRENT_BINARY_DIR}/aprepro_test_app ARGS ${CMAKE_CURRENT_SOURCE_DIR}/test.inp_app
-  OUTPUT_FILE test.output
-  PASS_ANY
- TEST_1 CMND sed ARGS s+${CMAKE_CURRENT_SOURCE_DIR}++ 
-		       ${CMAKE_CURRENT_BINARY_DIR}/test.output
-  OUTPUT_FILE filtered.output
-  PASS_ANY
- TEST_2 CMND diff ARGS -w
-		       ${CMAKE_CURRENT_SOURCE_DIR}/test_standard.out
-		       ${CMAKE_CURRENT_BINARY_DIR}/filtered.output
- COMM serial		      
- FINAL_PASS_REGULAR_EXPRESSION 
-)
-
-TRIBITS_ADD_ADVANCED_TEST(
- aprepro_lib_array_test
- TEST_0 CMND ${CMAKE_CURRENT_BINARY_DIR}/aprepro_test_app
-	ARGS --include=${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/test-array.i
-  OUTPUT_FILE test-array.out
-  PASS_ANY
- TEST_1 CMND diff ARGS -w
-		       ${CMAKE_CURRENT_SOURCE_DIR}/test-array.gold
-		       ${CMAKE_CURRENT_BINARY_DIR}/test-array.out
- COMM serial		      
- FINAL_PASS_REGULAR_EXPRESSION 
-)
 
 SEACAS_POSTPROCESS()
 
