SEACAS: Fix issues with cmake build
There were several if statments that tested a variable that wasn't always
set. Given the way it was used when the variable wasn't set cmake didn't
have enough arguments to if which caused an error parsing the line.
Changed the ifs to not derefernce the variable. Cmake will automatically
do this in conditionals and will evaluate an empty value as the empty
string so the logic is still correct.

--- a/src/libraries/ioss/CMakeLists.txt
+++ b/src/libraries/ioss/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   INCLUDE(TribitsPackageMacros)
   INCLUDE(TribitsAddOptionAndDefine)
   TRIBITS_PACKAGE(IOSS)
