--- a/src/libraries/ioss/src/exo_fac/CMakeLists.txt
+++ b/src/libraries/ioss/src/exo_fac/CMakeLists.txt
@@ -1,6 +1,6 @@
 INCLUDE(TribitsLibraryMacros)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE(Ioexo_fac)
 endif()
 SET(HEADERS "")
@@ -16,7 +16,7 @@ INCLUDE_DIRECTORIES(
 )
 
 SET(IOSS_DEPENDENCIES "")
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   IF (TPL_ENABLE_MPI)
     APPEND_SET(IOSS_DEPENDENCIES Iopx)
   ELSE()
@@ -37,6 +37,6 @@ TRIBITS_ADD_LIBRARY(
 	DEPLIBS ${IOSS_DEPENDENCIES}
 )
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE_POSTPROCESS()
 endif()
