--- a/src/libraries/ioss/src/init/CMakeLists.txt
+++ b/src/libraries/ioss/src/init/CMakeLists.txt
@@ -1,7 +1,7 @@
 INCLUDE(TribitsLibraryMacros)
 INCLUDE(CheckIncludeFile)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE(Ionit)
 endif()
 SET(HEADERS "")
@@ -16,7 +16,7 @@ INCLUDE_DIRECTORIES(
   "${CMAKE_CURRENT_BINARY_DIR}/../"
 )
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   SET(PREFIX "SEACAS")
   SET(TPL_PREFIX "TPL")
 else()
@@ -48,7 +48,6 @@ IF (NOT ${PREFIX}_ENABLE_ParaviewImesh)
   ADD_DEFINITIONS(-DNO_PARAVIEWIMESH_SUPPORT)
 ENDIF()
 
-
 TRIBITS_ADD_LIBRARY(
 	Ionit
 	HEADERS	${HEADERS}
@@ -59,7 +58,7 @@ IF (BUILD_TESTING)
   ENABLE_TESTING()
 ENDIF (BUILD_TESTING)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   INSTALL(FILES ${HEADERS} DESTINATION
       ${CMAKE_INSTALL_PREFIX}/include/init/)
 else()
@@ -68,6 +67,6 @@ else()
 endif()
 
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE_POSTPROCESS()
 endif()
