--- a/src/libraries/ioss/src/main/CMakeLists.txt
+++ b/src/libraries/ioss/src/main/CMakeLists.txt
@@ -2,7 +2,7 @@ INCLUDE(TribitsLibraryMacros)
 INCLUDE(TribitsAddExecutable)
 INCLUDE(CheckIncludeFile)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE(IoMain)
 endif()
 
@@ -18,7 +18,7 @@ INCLUDE_DIRECTORIES(
   "${CMAKE_CURRENT_BINARY_DIR}/../"
 )
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   SET(PREFIX "SEACAS")
 else()
   SET(PREFIX ${PACKAGE_NAME})
@@ -29,7 +29,7 @@ IF (NOT ${PREFIX}_ENABLE_${ENABLED})
   ADD_DEFINITIONS(-DNO_EXODUS_SUPPORT)
 endif()
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   ADD_DEFINITIONS(-DNO_XDMF_SUPPORT)
 ELSE()
   ASSERT_DEFINED(${PACKAGE_NAME}_ENABLE_XDMF)
