--- a/src/libraries/ioss/src/utest/CMakeLists.txt
+++ b/src/libraries/ioss/src/utest/CMakeLists.txt
@@ -1,6 +1,6 @@
 INCLUDE(TribitsAddExecutableAndTest)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE(IoUtest)
 endif()
 
@@ -30,7 +30,7 @@ TRIBITS_ADD_TEST(
   COMM serial
 )
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   SET(PREFIX "SEACAS")
 else()
   SET(PREFIX ${PACKAGE_NAME})
