--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -1,7 +1,7 @@
 INCLUDE(TribitsAddExecutable)
 INCLUDE(TribitsLibraryMacros)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   SET(PREFIX "")
 else()
   SET(PREFIX SEACAS)
