--- a/src/applications/nem_slice/CMakeLists.txt
+++ b/src/applications/nem_slice/CMakeLists.txt
@@ -3,7 +3,7 @@ INCLUDE(TribitsLibraryMacros)
 INCLUDE(CheckIncludeFile)
 
 SEACAS_PACKAGE(Nemslice)
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   ADD_DEFINITIONS(-DUSE_ZOLTAN)
 else()
   IF (${PACKAGE_NAME}_ENABLE_Zoltan)
