--- a/src/libraries/exodus/cbind/CMakeLists.txt
+++ b/src/libraries/exodus/cbind/CMakeLists.txt
@@ -20,7 +20,7 @@ SET(HEADERS
   include/exodusII_par.h
 )
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   SET(ENABLED Exodus)
 else()
   SET(ENABLED SEACASExodus)
@@ -32,7 +32,7 @@ IF (NOT ${ENABLED}_ENABLE_MPI)
   LIST(REMOVE_ITEM HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/exodusII_par.h")
 ENDIF()
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   ASSERT_DEFINED(TPL_Netcdf_Enables_Netcdf4)
   if(NOT TPL_Netcdf_Enables_Netcdf4) 
          ADD_DEFINITIONS(-DNOT_NETCDF4)
