--- a/src/libraries/ioss/src/exo_fpp/CMakeLists.txt
+++ b/src/libraries/ioss/src/exo_fpp/CMakeLists.txt
@@ -1,6 +1,6 @@
 INCLUDE(TribitsLibraryMacros)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE(Iofx)
 endif()
 SET(HEADERS "")
@@ -25,6 +25,6 @@ IF (BUILD_TESTING)
   ENABLE_TESTING()
 ENDIF (BUILD_TESTING)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE_POSTPROCESS()
 endif()
