--- a/src/libraries/ioss/src/exodus/CMakeLists.txt
+++ b/src/libraries/ioss/src/exodus/CMakeLists.txt
@@ -1,5 +1,5 @@
 INCLUDE(TribitsLibraryMacros)
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE(Ioex)
 endif()
 SET(HEADERS "")
@@ -24,6 +24,6 @@ IF (BUILD_TESTING)
   ENABLE_TESTING()
 ENDIF (BUILD_TESTING)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE_POSTPROCESS()
 endif()
