--- a/src/libraries/ioss/src/pamgen/CMakeLists.txt
+++ b/src/libraries/ioss/src/pamgen/CMakeLists.txt
@@ -1,6 +1,6 @@
 INCLUDE(TribitsLibraryMacros)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE(Iopg)
 endif()
 SET(HEADERS "")
@@ -26,6 +26,6 @@ IF (BUILD_TESTING)
   ENABLE_TESTING()
 ENDIF (BUILD_TESTING)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE_POSTPROCESS()
 endif()
