--- a/src/libraries/ioss/src/xdmf/CMakeLists.txt
+++ b/src/libraries/ioss/src/xdmf/CMakeLists.txt
@@ -1,7 +1,7 @@
 INCLUDE(TribitsLibraryMacros)
 INCLUDE(CheckIncludeFile)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE(Ioxf)
 endif()
 
@@ -27,6 +27,6 @@ IF (BUILD_TESTING)
   ENABLE_TESTING()
 ENDIF (BUILD_TESTING)
 
-if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
+if(CMAKE_PROJECT_NAME STREQUAL "SEACAS")
   TRIBITS_SUBPACKAGE_POSTPROCESS()
 endif()
