Fix so tests are not active unless SEACAS_ENABLE_TESTS=ON

--- a/src/libraries/ioss/src/utest/CMakeLists.txt
+++ b/src/libraries/ioss/src/utest/CMakeLists.txt
@@ -16,6 +16,8 @@ INCLUDE_DIRECTORIES(
   "${CMAKE_CURRENT_BINARY_DIR}/../"
 )
 
+if(${SEACAS_PREFIX}IOSS_ENABLE_TESTS)
+
 TRIBITS_ADD_EXECUTABLE(
   Utst_ioel
   SOURCES Utst_ioel.C
@@ -49,3 +51,5 @@ IF (${PREFIX}_ENABLE_${ENABLED})
     ARGS ${CMAKE_CURRENT_SOURCE_DIR}/cbr2.ncf
   )
 ENDIF()
+
+endif()
