--- a/src/applications/aprepro/CMakeLists.txt
+++ b/src/applications/aprepro/CMakeLists.txt
@@ -70,6 +70,8 @@ if(GENERATE_BISON_FILES)
                      )
 endif()
 
+if(${SEACAS_PREFIX}Aprepro_ENABLE_TESTS)
+
 TRIBITS_ADD_ADVANCED_TEST(
  aprepro_unit_test
  TEST_0 CMND ${CMAKE_CURRENT_BINARY_DIR}/aprepro ARGS -q ${CMAKE_CURRENT_SOURCE_DIR}/test.inp_app
@@ -98,6 +100,8 @@ TRIBITS_ADD_ADVANCED_TEST(
  COMM serial		      
  FINAL_PASS_REGULAR_EXPRESSION 
 )
+
+endif()
 
 SEACAS_POSTPROCESS()
 
