Modify slightly [ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,9 @@ before_install:
 
 before_script:
 
-install:
-  - /bin/true
+install: true
 
-script:
-  - /bin/true
+script: true
 
 env:
   global:
