--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ addons:
       name: "gsjaardema/seacas"
       description: "Build submitted via Travis CI"
     notification_email: gsjaardema@gmail.com
-    build_command: "../cmake-travis.sh coverity"
+    build_command: "./cmake-travis.sh coverity"
     branch_pattern: coverity_scan
 
